# atc_clearances

./: .env  .gitignore  .python-version  README.md  pyproject.toml  pyproject_old.toml  run_download_muac.sh  run_pipeline.sh  sftp_sync.sh
chunks/EPWA-epwa_app-Jun-23-2025-1000Z/: vad_chunks_metadata.json
core/: run_pipeline.py
figures/: paper_figs.py
notebooks/: 00_download_pipeline.ipynb  00_transcription_analysis.ipynb  00_transcription_picking.ipynb  01_transcription_performance.ipynb  liveATC_recorder.ipynb  osn_download.ipynb  sandbox_MUAC_recordings.ipynb  sandbox_atco2.ipynb  sandbox_atco_to_callsign.ipynb  sandbox_flightplan.ipynb  sandbox_matching.ipynb  sandbox_matching_old.ipynb  sandbox_osn.ipynb  sandbox_pipeline.ipynb  sandbox_vad.ipynb  sandbox_whisper.ipynb  test_pipeline.ipynb
transcripts/: EPWA-epwa_app-Jun-23-2025-1000Z.txt
utils/: atc_pipeline.py  cs_matching.py  download_muac.py  liveatc_utils.py  process_audio.py  process_muac.py  process_muac_audio.py  sftp_pull_sync.py  transcript_audio.py
utils_old/: liveatc_pipeline.py  liveatc_utils.py  process_muac_audio.py
