[project]
name = "atc-clearences"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "notebook>=7.4.2",
    "openai-whisper>=20240930",
    "pydub>=0.25.1",
    "wave>=0.0.2",
    "webrtcvad>=2.0.10",
]
