[project]
name = "atc-clearences"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "datasets>=3.6.0",
    "ipykernel>=6.29.5",
    "notebook>=7.4.2",
    "openai-whisper>=20240930",
    "pydub>=0.25.1",
    "soundfile>=0.13.1",
    "streamlink>=7.4.0",
    "torchaudio>=2.7.0",
    "transformers>=4.51.3",
    "wave>=0.0.2",
    "webrtcvad>=2.0.10",
]
