[project]
name = "atc_communication"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopy>=2.4.1",
    "haversine>=2.9.0",
    "ipyleaflet>=0.20.0",
    "notebook>=7.3.2",
    "openai-whisper>=20240930",
    "plotly>=5.24.1",
    "pydub>=0.25.1",
    "soundfile>=0.13.1",
    "streamlink>=7.4.0",
    "torchaudio>=2.7.1",
    "traffic>=2.11.1",
    "transformers>=4.52.4",
    "webrtcvad>=2.0.10",
]

[project.optional-dependencies]
cluster = [
    "cm-jupyter-eg-kernel-wlm>=4.0.1",
]
